<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RtspSingleActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="4dp">

        <Spinner
            android:id="@+id/sp_channel"
            android:layout_width="128dp"
            android:layout_height="wrap_content" />

        <CheckBox
            android:id="@+id/cb_tcp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:text="TCP" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video_url" />

        <EditText
            android:id="@+id/et_uri"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:text="rtsp://127.0.0.1:8554/main" />

        <TextView
            android:id="@+id/tv_operate"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:background="#00b0ff"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:text="@string/play"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_decode_mode"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/blue"
            android:textSize="14sp"
            tools:text="@string/decode_mode_hw" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <FrameLayout
                android:id="@+id/fl1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <SurfaceView
                    android:id="@+id/vv1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/fl2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <SurfaceView
                    android:id="@+id/vv2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center" />
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <FrameLayout
                android:id="@+id/fl3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <SurfaceView
                    android:id="@+id/vv3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/fl4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <SurfaceView
                    android:id="@+id/vv4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center" />
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>